refactor(life-control-api): eliminate Lombok dependency and migrate to Java 21 modern patterns
- Convert 5 DTOs to Java records (CompanyRequest, CompanyResponse, ApiUserRequest, ApiUserResponse, ApiUserUpdateRequest)
- Migrate 2 entities to classes with manual Builder pattern (Company, ApiUser)
- Replace @RequiredArgsConstructor with explicit constructor injection (CompanyService, ApiUserService)
- Replace @Slf4j with manual LoggerFactory.getLogger() field
- Remove Lombok dependencies from build.gradle (lines 45-46)
- Update tests to use record constructors instead of builder pattern

This change aligns with the project's AGENTS.md coding standards and removes
an external dependency, reducing the attack surface.